syntax = "proto3";
package protobuf;

import "shipInput.proto";
import "shipSensors.proto";

message environmentToVessel {
	string protocolVersion = 1;
	bool joinStatus = 2;
	string vesselID = 3;
	uint32 syncNumber = 4;
	ShipInput shipInput = 5;
	ShipSensors shipSensors = 6;
}
