syntax = "proto3";
package protobuf;

import "shipInput.proto";

message vesselToEnvironment {
	string protocolVersion = 1;
	string vesselID = 2;
	ShipInput shipInput = 3;
}
